kustomize/frontend/overlays/authselector-infra/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vigo-auth-organisation-selector-frontend
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.felleskomponent.no`)
      kind: Rule
      services:
        - name: vigo-auth-organisation-selector-frontend
          port: 8080
